# AppRepresentantes

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_AGENTE.md  DESKTOP_BUILD.md  INSTRUCOES.md  SECURITY_DNS_SETUP.md  SEGURANCA.md  SSD.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
migration/: 01_migrate_auth_users.sql  02_migrate_data_sqleditor.sql  03_erp_fdw.sql  README.md  RESUMO.md  schema_v2.sql
public/: manifest.json  privacidade.html  robots.txt  security-scanner-verify-709edc0d.txt
scripts/: gen-desktop-icon.mjs  gen-login-bg.mjs  gen-og-v2.mjs  gen-og.mjs
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/alerts/: engine.ts  notify.ts  prefs.ts  registry.ts  sounds.ts
src/components/: OrcamentoPDF.tsx  OrcamentoPDFButton.tsx
src/constants/: orderFilters.ts  perfis.ts
src/contexts/: AuthContext.tsx
src/data/: mockData.ts
src/hooks/: useAcompanhamento.ts  useAlertas.ts  useAuth.ts  useCarteira.ts  useClientGroups.ts  useClientes.ts  useDashboardStats.ts  useDataScope.ts  useExecutiveSummary.ts  useFinanceiro.ts  useMediaQuery.ts  useNotificacoes.ts  useOrcamentos.ts  usePedidos.ts  usePedidosVenda.ts  useProdutos.ts  useRepPerformance.ts  useTitulos.ts
src/pages/: AcompanhamentoPage.tsx  AlertasPage.tsx  AprovacoesPage.tsx  ClientesPage.tsx  DashboardPage.tsx  EditarOrcamentoPage.tsx  FinanceiroPage.tsx  LoginPage.tsx  NovoOrcamentoPage.tsx  OrcamentosPage.tsx  (+2 more)
(+98 files in other folders)
