[package]
name = "concrem-connect"
version = "0.1.0"
description = "Concrem Connect Desktop"
authors = ["Concrem Portas Premium"]
edition = "2021"
rust-version = "1.77.2"

# The library is what the mobile entry points link against; kept for parity with
# the Tauri v2 project layout even though we target desktop (Windows).
[lib]
name = "concrem_connect_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# used for the production build; disables the console window on Windows
custom-protocol = ["tauri/custom-protocol"]
